--- a/web/image_links.html
+++ b/web/image_links.html
@@ -7,11 +7,45 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./css/image_links.css">
     <title>Image ~ Links</title>
   </head>
   <body>
-    <h1>Image Links</h1>
+    <h1 class="text-center">Image Links</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-sm-6">
+                <div class="img-area">
+                    <img src="./img/tech.jpg" alt="Technology">
+                    <div class="img-text">
+                        <h3 class="text-center">Technology</h3>
+                        <h5 class="text-center">Tech drives the world</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="img-area">
+                    <img src="./img/nature.jpg" alt="Nature">
+                    <div class="img-text">
+                        <h3 class="text-center">Nature</h3>
+                        <h5 class="text-center">Nature is the best Medicine</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="img-area">
+                    <img src="./img/food.jpg" alt="Food">
+                    <div class="img-text">
+                        <h3 class="text-center">Food</h3>
+                        <h5 class="text-center">Food is necessary for development</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
